Fix Search Input legibility issue
This affects larger screens currently

--- a/resources/Breakpoints.css
+++ b/resources/Breakpoints.css
@@ -492,12 +492,15 @@
 		--button-foreground-color-rgb:var(--luna-background-color-rgb);
 	}
 
-	.has-accents .search .cpe-dropdown__content .cpe-list .pageheader-search .cpe-input {
+	.search .cpe-dropdown__content .cpe-list .pageheader-search .cpe-input {
 		--tabs-color:var(--luna-tabs-background-color);
 		--tabs-opacity:var(--luna-active-tabs-opacity);
 		--input-box-color-contrast:var(--luna-background-color);
 		--input-box-text:var(--luna-text-background-color);
 		--input-box-border:currentColor;
+	}
+
+	.has-accents .search .cpe-dropdown__content .cpe-list .pageheader-search .cpe-input {
 		--input-box-focus:var(--luna-highlight-background-color-rgb);
 		--input-box-solid:var(--luna-highlight-background-color);
 	}
