--- a/resources/Visual_Styles.css
+++ b/resources/Visual_Styles.css
@@ -2883,15 +2883,19 @@ color:inherit;
 		--button-foreground-color-rgb:var(--luna-background-color-rgb);
 	}
 
-	.visualstyle-general.has-accents .search .cpe-dropdown__content .cpe-list .pageheader-search .cpe-input {
+	.visualstyle-general .search .cpe-dropdown__content .cpe-list .pageheader-search .cpe-input {
 		--tabs-color:var(--luna-tabs-background-color);
 		--tabs-opacity:var(--luna-active-tabs-opacity);
 		--input-box-color-contrast:var(--luna-background-color);
 		--input-box-text:var(--luna-text-background-color);
 		--input-box-border:currentColor;
+	}
+
+	.visualstyle-general.has-accents .search .cpe-dropdown__content .cpe-list .pageheader-search .cpe-input {
 		--input-box-focus:var(--luna-hyperlink-background-color-rgb);
 		--input-box-solid:var(--luna-hyperlink-background-color);
 	}
+
 
 }
 
